# rules_compress

./: .gitattributes  BUILD.bazel  MODULE.bazel  README.md  extensions.bzl  formatter.json
.build/: BUILD.bazel  MODULE.bazel  module_bazel.patch  patched_file.bzl  public.BUILD.bazel  s2.BUILD.bazel  s2_build_bazel.patch  zip_build_bazel.patch
.github/workflows/: ci.bazelrc  release.sh  release.yaml  test.yaml
compress/: BUILD.bazel  defs.bzl  s2_assets.bzl  zip_assets.bzl
compress/private/: BUILD.bazel  s2.bzl  zip.bzl
compress/tests/: BUILD.bazel  s2_compress.bzl
docs/: BUILD.bazel  rules.md  s2.md  zip.md
e2e/: BUILD.bazel  MODULE.bazel
lib/: BUILD.bazel  repositories.bzl  toolchain.bzl
s2/: BUILD.bazel  README.md  artifacts.bzl  assets.bzl  defs.bzl  repositories.bzl  s2.bzl  s2_compress.bzl  toolchain.BUILD.bazel  toolchain.bzl  toolchains.BUILD.bazel  utils.bzl
s2/docs/: BUILD.bazel  repositories.md  rules.md
s2/private/: BUILD.bazel  s2.bzl  toolchain.BUILD.bazel  toolchains.BUILD.bazel
s2/tests/: s2_compress.bzl
s2/toolchains/: BUILD.bazel  assets.bzl
scripts/release/: BUILD.bazel  build.sh  notes.sh
tests/: BUILD.bazel
utils/: BUILD.bazel  repositories.bzl  toolchain.bzl
zip/: BUILD.bazel  README.md  assets.bzl  defs.bzl  repositories.bzl  toolchain.BUILD.bazel  toolchain.bzl  toolchains.BUILD.bazel  utils.bzl  zip.bzl
zip/docs/: BUILD.bazel  repositories.md  rules.md
zip/private/: BUILD.bazel  toolchain.BUILD.bazel  toolchains.BUILD.bazel  zip.bzl
zip/toolchains/: BUILD.bazel  assets.bzl
