load("@buildifier_prebuilt//:rules.bzl", "buildifier", "buildifier_test")

exports_files(["MODULE.bazel"])

buildifier(
    name = "format",
    exclude_patterns = [
        "./.git/*",
    ],
    lint_mode = "fix",
    mode = "fix",
)

buildifier_test(
    name = "lint",
    size = "small",
    lint_mode = "warn",
    mode = "check",
    no_sandbox = True,
    tags = ["manual"],
    workspace = "//:WORKSPACE",
)

test_suite(
    name = "setup",
    tags = ["manual"],
    tests = [
        ":lint",
        "//dist:update_patches_tests",
        "//s2/docs:update_tests",
        "//zip/docs:update_tests",
    ],
)

test_suite(
    name = "packages",
    tests = [
        "//s2/tests",
    ],
)
