load("@buildifier_prebuilt//:rules.bzl", "buildifier", "buildifier_test")

exports_files(["MODULE.bazel"])

buildifier(
    name = "format",
    exclude_patterns = [
        "./.git/*",
    ],
    lint_mode = "fix",
    mode = "fix",
)

buildifier_test(
    name = "lint",
    size = "small",
    exclude_patterns = [
        "**/assets.bzl",
    ],
    lint_mode = "warn",
    mode = "check",
    no_sandbox = True,
    workspace = "//:WORKSPACE",
)
