module(
    name = "bzlparty_rules_compress",
    version = "0.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "platforms", version = "0.0.8")
bazel_dep(name = "rules_license", version = "0.0.8")

# dist:not {
bazel_dep(name = "bazel_skylib", version = "1.5.0")
bazel_dep(name = "aspect_bazel_lib", version = "2.3.0")
bazel_dep(name = "bzlparty_tools")
archive_override(
    module_name = "bzlparty_tools",
    integrity = "sha384-uE1Fsp623XbUyHzCn/u8cx3gJa6WN/aVBZWeaeWm7NG8OiK1tPZ2mk90eIvt8mgM",
    strip_prefix = "tools-0.3.1",
    urls = "https://github.com/bzlparty/tools/releases/download/v0.3.1/tools-v0.3.1.tar.gz",
)
# }

rules_compress_toolchains = use_extension("@bzlparty_rules_compress//:extensions.bzl", "toolchains")
rules_compress_toolchains.s2()
rules_compress_toolchains.zip()
use_repo(rules_compress_toolchains, "s2", "zip")

register_toolchains("@s2//:all", "@zip//:all")

bazel_dep(name = "buildifier_prebuilt", version = "6.4.0", dev_dependency = True)
