module(
    name = "bzlparty_rules_compress",
    version = "0.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "platforms", version = "0.0.8")
bazel_dep(name = "rules_license", version = "0.0.8")
bazel_dep(name = "bazel_skylib", version = "1.5.0")
bazel_dep(name = "bzlparty_tools")
archive_override(
    module_name = "bzlparty_tools",
    integrity = "sha384-jmMjAUiTmImYgb/Dm2aFaJnholRJVB461ProsVhj2TlkqxvLIe5gr8pgGpDmQyRI",
    strip_prefix = "tools-0.3.2",
    urls = "https://github.com/bzlparty/tools/releases/download/v0.3.2/tools-v0.3.2.tar.gz",
)

bazel_dep(name = "aspect_bazel_lib", version = "2.3.0", dev_dependency = True)
bazel_dep(name = "buildifier_prebuilt", version = "6.4.0", dev_dependency = True)

tools = use_extension("@bzlparty_tools//:extensions.bzl", "tools", dev_dependency = True)
use_repo(tools, "biome", "shellcheck", "typos")

rules_compress_toolchains = use_extension("@bzlparty_rules_compress//:extensions.bzl", "toolchains")
rules_compress_toolchains.s2()
rules_compress_toolchains.zip()
use_repo(rules_compress_toolchains, "s2", "zip")

register_toolchains("@s2//:all", "@zip//:all")
