load("@bazel_skylib//rules:build_test.bzl", "build_test")
load(
    "@bzlparty_rules_compress//compress:defs.bzl",
    "gz_compress",
    "s2_compress",
    "zip",
)

genrule(
    name = "empty_file_gen",
    outs = ["empty_file"],
    cmd = "head -c 1MB </dev/urandom >$(OUTS)",
)

s2_compress(
    name = "empty_file_compress",
    src = ":empty_file",
    out = "empty_file.s2",
)

gz_compress(
    name = "empty_file_gz",
    src = ":empty_file",
    out = "empty_file.gz",
)

zip(
  name = "zip_file",
  srcs = [":empty_file_gen", "empty_file_compress"],
  out = "zip_file.zip",
)

build_test(
    name = "empty_file_test",
    targets = [
        ":empty_file_compress",
        ":empty_file_gz",
    ],
)
