module(name = "bzlparty_rules_compress_e2e")

bazel_dep(name = "bazel_skylib", version = "1.5.0")
bazel_dep(name = "bzlparty_tools")
git_override(
    module_name = "bzlparty_tools",
    commit = "dfd3404b825b32a41623eeeb7d62f675613fd7b6",
    remote = "https://github.com/bzlparty/tools.git",
)

bazel_dep(name = "bzlparty_rules_compress")
local_path_override(
    module_name = "bzlparty_rules_compress",
    path = "..",
)
