load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files(["platform_binary.awk"])

bzl_library(
    name = "toolchain",
    srcs = ["toolchain.bzl"],
    visibility = ["//visibility:private"],
)

bzl_library(
    name = "repositories",
    srcs = ["repositories.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        ":toolchain",
        "@bzlparty_tools//lib:platforms",
    ],
)
