load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        ":s2",
    ],
)

bzl_library(
    name = "s2",
    srcs = [
        "s2.bzl",
    ],
    visibility = ["//visibility:private"],
)

bzl_library(
    name = "assets",
    srcs = [
        "assets.bzl",
    ],
    visibility = ["//visibility:private"],
    deps = [
        "@bzlparty_tools//lib:platforms",
    ],
)

bzl_library(
    name = "repositories",
    srcs = ["repositories.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        ":assets",
        "//utils:repositories",
        "@bzlparty_tools//lib:github",
    ],
)

toolchain_type(
    name = "s2c_toolchain_type",
    visibility = ["//visibility:public"],
)
