load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@bzlparty_tools//lib:defs.bzl", "platform_binaries")

package(default_visibility = ["//visibility:public"])

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    deps = [
        "//s2/private:s2",
    ],
)

bzl_library(
    name = "assets",
    srcs = [
        "assets.bzl",
    ],
)

GITHUB_URL = "https://github.com/klauspost/compress/releases/download/v1.17.9"

platform_binaries(
    name = "s2c",
    binary = "s2c",
    platforms = [
        "darwin_amd64",
        "darwin_arm64",
        "freebsd_amd64",
        "freebsd_arm64",
        "linux_amd64",
        "linux_arm64",
        "netbsd_amd64",
        "windows_amd64",
        "windows_arm64",
    ],
    url = "%s/s2-{platform}.{ext}" % GITHUB_URL,
)

toolchain_type(
    name = "s2c_toolchain_type",
)
