"BUILD file template for a platform-sepecific toolchain"

load("@bzlparty_rules_compress//s2:toolchain.bzl", "s2_toolchain")

exports_files(["EXECUTABLE"], visibility = ["//visibility:public"])

s2_toolchain(
    name = "s2c_toolchain",
    executable = "EXECUTABLE",
    visibility = ["//visibility:public"],
)
