"BUILD file template for a platform-sepecific toolchain"

load("@bzlparty_rules_compress//utils:toolchain.bzl", "compress_toolchain")

package(default_visibility = ["//visibility:public"])

compress_toolchain(
    name = "s2c_toolchain",
    executable = select({
        "@bazel_tools//src/conditions:host_windows": "s2c.exe",
        "//conditions:default": "s2c",
    }),
)
