load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files([
    "toolchains.bzl",
    "repositories.bzl",
])

bzl_library(
    name = "toolchain",
    srcs = ["toolchain.bzl"],
    visibility = ["//visibility:private"],
)

bzl_library(
    name = "repositories",
    srcs = ["repositories.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        ":toolchain",
        "@bzlparty_tools//lib:platforms",
    ],
)
