load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

package(default_visibility = ["//visibility:public"])

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    deps = [
        "//zip/private:zip",
    ],
)

bzl_library(
    name = "assets",
    srcs = [
        "assets.bzl",
    ],
    deps = [
        "@bzlparty_tools//lib:platforms",
    ],
)

bzl_library(
    name = "repositories",
    srcs = ["repositories.bzl"],
    deps = [
        ":assets",
        "//utils:repositories",
        "@bzlparty_tools//lib:github",
        "@bzlparty_tools//lib:platforms",
    ],
)

toolchain_type(
    name = "zip_toolchain_type",
)
