"BUILD file template for a platform-sepecific toolchain"

load("@bzlparty_rules_compress//utils:toolchain.bzl", "compress_toolchain")

package(default_visibility = ["//visibility:public"])

compress_toolchain(
    name = "zip_toolchain",
    executable = select({
        "@bazel_tools//src/conditions:host_windows": "7zz.exe",
        "//conditions:default": "7zz",
    }),
)
