"BUILD file template for a combined toolchain that hosts all platform toolchains"

load("@bzlparty_rules_compress//zip:assets.bzl", "PLATFORMS")
load("@bzlparty_rules_compress//zip:utils.bzl", "executable_target")

[(
    toolchain(
        name = "zip-%s_toolchain" % platform,
        toolchain = "@zip-%s//:zip_toolchain" % platform,
        exec_compatible_with = ecw,
        toolchain_type = "@bzlparty_rules_compress//zip:zip_toolchain_type",
        visibility = ["//visibility:public"],
    ),
    alias(
        name = "zip-%s" % platform,
        actual = "@zip-%s//:%s" % (platform, executable_target("EXECUTABLE", platform)),
    ),
) for (platform, ecw) in PLATFORMS.items()]

alias(
    name = "bin",
    actual = "@zip-HOST_PLATFORM//:%s" % executable_target("EXECUTABLE", "HOST_PLATFORM"),
)
