"BUILD file template for a platform-sepecific toolchain"

load("@bzlparty_tools//lib:toolchains.bzl", "binary_toolchain")

package(default_visibility = ["//visibility:public"])

binary_toolchain(
    name = "s2c_toolchain",
    prefix = "s2c",
    binary = select({
        "@bazel_tools//src/conditions:host_windows": "s2c.exe",
        "//conditions:default": "s2c",
    }),
)
