"BUILD file template for a combined toolchain that hosts all platform toolchains"

load("@bzlparty_rules_compress//s2:assets.bzl", "ASSETS")
load("@bzlparty_tools//lib:platforms.bzl", "PLATFORMS")

_SUPPORTED_PLATFORMS = ASSETS.keys()

[
    toolchain(
        name = "s2c_%s_toolchain" % platform,
        toolchain = "@s2_%s//:s2c_toolchain" % platform,
        exec_compatible_with = ecw,
        toolchain_type = "@bzlparty_rules_compress//s2:s2c_toolchain_type",
        visibility = ["//visibility:public"],
    ) if platform in _SUPPORTED_PLATFORMS else ()
    for (platform, ecw) in PLATFORMS.items()
]
