load("@bazel_skylib//rules:write_file.bzl", "write_file")
load("@bzlparty_tools//lib:create_module_bazel.bzl", "create_module_bazel")
load("@bzlparty_tools//lib:git_archive.bzl", "git_archive")

ROOT_BUILD_FILE = """\
load("@rules_license//rules:license.bzl", "license")

package(
    default_applicable_licenses = [":license"],
    default_visibility = ["//visibility:public"],
)

license(
    name = "license",
    license_kinds = [
        "@rules_license//licenses/spdx:LGPL-3.0-or-later",
    ],
    license_text = "LICENSE",
)

exports_files([
    "LICENSE",
    "MODULE.bazel",
])
"""

write_file(
    name = "root_build_bazel",
    out = "root_BUILD.bazel",
    content = [ROOT_BUILD_FILE],
    tags = ["manual"],
)

write_file(
    name = "toolchains_build_bazel",
    out = "toolchains_BUILD.bazel",
    content = [
        "package(default_visibility = [\"//visibility:public\"])",
        "exports_files([\"assets.bzl\"])",
    ],
    tags = ["manual"],
)

alias(
    name = "zip_toolchains_build_bazel",
    actual = "toolchains_build_bazel",
)

alias(
    name = "s2_toolchains_build_bazel",
    actual = "toolchains_build_bazel",
)

create_module_bazel(
    name = "root_module_bazel",
    out = "root_MODULE.bazel",
    tags = ["manual"],
)

git_archive(
    name = "git_archive",
    package_name = "rules_compress",
    sha = "@sha//:sha",
    tags = ["manual"],
    virtual_files = {
        ":root_BUILD.bazel": "BUILD.bazel",
        ":root_MODULE.bazel": "MODULE.bazel",
        ":s2_toolchains_build_bazel": "s2/toolchains/BUILD.bazel",
        ":zip_toolchains_build_bazel": "zip/toolchains/BUILD.bazel",
    },
)
